--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,3 +1,7 @@
-body{
-    background-color: black;
+@use 'variables' as v;
+
+body {
+    font-family: v.$main_font;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
