--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,1 +1,9 @@
 $main_font: "Montserrat", sans-serif;
+
+// Colors
+$verde:#4CB8B3;
+$rosa: #F53756;
+$amarillo: #fdda00;
+$morado: #752F97;
+$negro: #000000;
+$blanco: #FFFFFF;
