--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,8 +1,1 @@
-@use './base/variables' as v;
-@use 'base/normalize';
-
-body {
-    font-family: v.$main_font;
-    font-optical-sizing: auto;
-    font-style: normal;
-}
+@forward 'base';
