--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,23 +1,34 @@
 @use '../base/variables' as v;
+@use '../base/mixins' as m;
 
 .header{
     background-color: v.$verde;
 
     h1{
         color: v.$blanco;
-        margin: 0;
+        text-align: center;
+
+        @include m.tablet{
+            margin: 0;
+            text-align: left;
+        }
     }
 
     .contenido-header{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
         padding: 2rem;
+
+        @include m.tablet{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
     }
 }
 
 .navegacion-principal{
     display: flex;
+    flex-direction: column;
+    align-items: center;
     gap: 2rem;
 
     a{
@@ -27,5 +38,9 @@
         &:hover{
             color: v.$amarillo;
         }
+    }
+
+    @include m.tablet{
+        flex-direction: row;
     }
 }
