--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -7,10 +7,15 @@
     h1{
         color: v.$blanco;
         text-align: center;
+        font-size: 3.5rem;
 
         @include m.tablet{
             margin: 0;
             text-align: left;
+        }
+
+        @include m.desktop{
+            font-size: 4rem;
         }
     }
 
