--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -23,3 +23,15 @@
         @content;
     }
 }
+
+@mixin contenedor{
+    width: 95%;
+    max-width: 120rem;
+    margin: 0 auto;    
+}
+
+@mixin grid($columns: 1, $gap: 4rem){
+    display: grid;
+    grid-template-columns: repeat($columns, 1fr);
+    column-gap: $gap;    
+}
