--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -35,3 +35,9 @@
     grid-template-columns: repeat($columns, 1fr);
     column-gap: $gap;    
 }
+
+@mixin list-reset{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
