--- a/src/scss/layout/_galeria.scss
+++ b/src/scss/layout/_galeria.scss
@@ -27,3 +27,56 @@
         }
     }
 }
+
+.modal{
+    position: fixed;
+    inset: 0;
+    background-color: rgba(v.$negro, 0.5);
+    display: grid;
+    place-items: center;
+    animation: fadeIn ease-in 0.3s;
+
+    &.fade-out{
+        animation: fadeOut ease-in 0.32s;
+    }
+}
+
+.modal-inner{
+    position: relative;
+    margin: 0 5%;
+
+    .modal-close-btn{
+        position: absolute;
+        right: -10px;
+        top: -10px;
+        border-radius: 50%;
+        width: 3.5rem;
+        height: 3.5rem;
+        font-weight: 500;
+        cursor: pointer;
+    }
+
+    img{
+        max-width: 100rem;
+    }
+}
+
+@keyframes fadeIn {
+    0%{
+        opacity: 0;
+    }
+
+    100%{
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut {
+    0%{
+        opacity: 1;
+    }
+
+    100%{
+        opacity: 0;
+    }
+}
